--- a/index.html
+++ b/index.html
@@ -547,9 +547,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Bengal Education Development Society &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved</p>
+            <p>Bengal Education Development Society &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved <a href="https://colorlib.com" target="_blank">.</a></p>
           </div>
         </div>
       </div>
