--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/bg_7.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -102,12 +102,12 @@
     <section class="ftco-section">
     	<div class="container">
     		<div class="row d-flex">
-    			<div class="col-md-6 pl-md-5 ftco-animate">
+    			<div class="col-md-8 pl-md-5 ftco-animate">
     				<h2 class="mb-4">Bengal Education Development Society</h2>
-    				<p>a Government-registered Non-Governmental Organization (NGO) dedicated to bringing meaningful change in society through education, healthcare, social awareness, and community welfare. For the past 20 years, we have been working tirelessly to uplift underprivileged communities across west Bengal, various state of India & abroad by focusing on sustainable development and holistic growth.</p>
+    				<p>A Government-registered Non-Governmental Organization (NGO) dedicated to bringing meaningful change in society through education, healthcare, social awareness, and community welfare. <br>For the past 20 years, we have been working tirelessly to uplift underprivileged communities across west Bengal, various state of India & abroad by focusing on sustainable development and holistic growth.</p>
     			</div>
-          <div class="col-md-6 d-flex ftco-animate">
-    				<div class="img img-about align-self-stretch" style="background-image: url(images/bg_3.jpg); width: 100%;"></div>
+          <div class="col-md-4 d-flex ftco-animate">
+    				<div class="img img-about align-self-stretch" style="background-image: url(./img/volunteer-banner-01.jpeg); width: 100%;"></div>
     			</div>
     		</div>
     	</div>
@@ -117,7 +117,7 @@
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex ftco-animate">
-    				<div class="img img-about align-self-stretch" style="background-image: url(images/bg_3.jpg); width: 100%;"></div>
+    				<div class="img img-about align-self-stretch" style="background-image: url(./img/home-banner-02.jpeg); width: 100%;"></div>
     			</div>
     			<div class="col-md-6 pl-md-5 ftco-animate">
     				<h2 class="mb-4">Our Vision</h2>
@@ -165,6 +165,25 @@
     	</div>
     </section>
 
+    <section class="ftco-section">
+      <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-12 mb-5"><h1>What We Do!</h1></div>
+        <div class="col-md-6">
+          <p class="lead">Over the last two decades, we have successfully conducted a wide range of programs and initiatives, including:</p>
+          <p>✅ Education & Scholarships</p>
+          <p>✅ Healthcare & Awareness</p>
+          <p>✅ Environmental & Social Initiatives</p>
+          <p>✅ Women & Community Empowerment</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Join Us in Making a Difference</p>
+          <p>Through these efforts, the Bengal Education Development Society has touched thousands of lives, fostering hope, equality, and positive change. We believe change begins with us, and together, we can create a better tomorrow. Whether through volunteering, partnerships, or donations, your support helps us continue our mission to build a brighter, healthier, and more empowered society.</p>
+          <p>Let’s work together for education, health, environment, and humanity.</p>
+        </div>
+      </div>
+      </div>
+    </section>
 
     <section class="ftco-section bg-light">
     	<div class="container-fluid">
@@ -180,7 +199,7 @@
 
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/cause-1.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(./img/causes-banner-01.jpeg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Education & Scholarships</a></h3>
 		    						<!-- <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life</p>
@@ -195,7 +214,7 @@
 
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/cause-2.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(./img/causes-banner-02.jpeg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Healthcare & Awareness</a></h3>
 		    					</div>
@@ -204,7 +223,7 @@
 
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/cause-3.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(./img/causes-banner-03.jpeg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Environmental & Social Initiatives</a></h3>
 		    					</div>
@@ -213,7 +232,7 @@
 
 	    				<div class="item">
 	    					<div class="cause-entry">
-		    					<a href="#" class="img" style="background-image: url(images/cause-4.jpg);"></a>
+		    					<a href="#" class="img" style="background-image: url(./img/causes-banner-04.jpeg);"></a>
 		    					<div class="text p-3 p-md-4">
 		    						<h3><a href="#">Women & Community Empowerment</a></h3>
 		    					</div>
@@ -283,49 +302,96 @@
 
     <section class="ftco-gallery">
     	<div class="d-md-flex">
-	    	<a href="images/cause-2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-2.jpg);">
+	    	<a href="./img/home-gallery-01.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-01.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-3.jpg);">
+	    	<a href="./img/home-gallery-02.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-02.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-4.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-4.jpg);">
+	    	<a href="./img/home-gallery-03.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-03.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/cause-5.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-5.jpg);">
+	    	<a href="./img/home-gallery-04.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-04.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
     	</div>
     	<div class="d-md-flex">
-	    	<a href="images/cause-6.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/cause-6.jpg);">
+	    	<a href="./img/home-gallery-05.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-05.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_3.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_3.jpg);">
+	    	<a href="./img/home-gallery-06.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-06.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_1.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_1.jpg);">
+	    	<a href="./img/home-gallery-07.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-07.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="images/image_2.jpg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(images/image_2.jpg);">
+	    	<a href="./img/home-gallery-08.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-08.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
 	    </div>
+    </section>
+
+    <section class="ftco-section">
+      <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-12 mb-5"><h1>Bengal Talent Search Scholarship Exams</h1></div>
+        <div class="col-md-12">
+          <p>The Bengal Talent Search Scholarship Exams are organized to identify and support talented students. These exams help students pursue higher education and receive scholarships for their academic growth and future success.</p>
+          <p class="lead">Why Talent Search Exams are Important</p>
+          <p>✅ Identifying Potential: Talent search exams help recognize students who have the ability to excel in higher education and beyond.</p>
+          <p>✅ Providing Support: They offer scholarships and other benefits, helping students continue their education without financial burden.</p>
+          <p>✅ Encouraging Scientific Thinking: These exams inspire curiosity and promote logical and scientific thinking in young minds.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Importance of Education</p>
+          <p>Education is essential for becoming a complete and responsible human being. It should always be used for constructive purposes—to build knowledge, improve society, and create a better future.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Advice to Teachers & Parents</p>
+          <p>We request teachers and parents to work together for the bright future of students. Your guidance, encouragement, and cooperation play a crucial role in shaping their success.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Subjects Covered in Talent Search Exams</p>
+          <p>✅ Talent search exams include a variety of subjects, such as:</p>
+          <p>✅ Science, Mathematics, English & Bengali</p>
+          <p>✅ General Knowledge & Social Studies</p>
+          <p>✅ Mental Ability & Logical Reasoning</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">How to Prepare for the Exams</p>
+          <p>✅ Take exams with the goal of gaining knowledge, not just memorizing facts.</p>
+          <p>✅ Focus on understanding concepts clearly.</p>
+          <p>✅ Seek help from teachers whenever needed.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Benefits of Talent Search Exams</p>
+          <p>✅ Build confidence and improve personality development.</p>
+          <p>✅ Enhance time management skills.</p>
+          <p>✅ Help students analyze their strengths and weaknesses.</p>
+          <p>✅ Encourage self-learning and curiosity.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="lead">Discovering Interests & Abilities</p>
+          <p>✅  Talent search exams help students discover their interests and strengths. They also allow parents to support their children in the right direction, while teachers can assess students’ mental ability and scholastic aptitude effectively.</p>
+        </div>
+      </div>
+      </div>
     </section>
 
     <!-- <section class="ftco-section">
@@ -449,12 +515,12 @@
       </div>
     </section> -->
 		
-		<section class="ftco-section-3 img" style="background-image: url(images/bg_3.jpg);">
+		<section class="ftco-section-3 img" style="background-image: url(./img/volunteer-banner-01.jpeg);">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex">
     		<div class="col-md-6 d-flex ftco-animate">
-    			<div class="img img-2 align-self-stretch" style="background-image: url(images/bg_4.jpg);"></div>
+    			<div class="img img-2 align-self-stretch" style="background-image: url(./img/volunteer-banner-01.jpeg);"></div>
     		</div>
     		<div class="col-md-6 volunteer pl-md-5 ftco-animate">
     			<h3 class="mb-3">Be a volunteer</h3>
@@ -481,11 +547,11 @@
     	<div class="overlay"></div>
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md-3">
+          <div class="col-md-5">
             <div class="ftco-footer-widget mb-4">
-              <img src="./img/nav-logo-beds.jpeg" alt="Logo" style="height: 35px; margin-bottom: 15px;">
+              <img src="./img/beds-bengali-logo.jpeg" alt="Logo" style="height: 55px; margin-bottom: 15px;">
               <h2 class="ftco-heading-2">About Us</h2>
-              <p>a Government-registered Non-Governmental Organization (NGO) dedicated to bringing meaningful change in society through education, healthcare, social awareness, and community welfare.</p>
+              <p>A Government-registered Non-Governmental Organization (NGO) dedicated to bringing meaningful change in society through education, healthcare, social awareness, and community welfare.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -493,41 +559,25 @@
               </ul>
             </div>
           </div>
-          <!-- <div class="col-md-4">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Recent Blog</h2>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
-                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
           <div class="col-md-2">
              <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Site Links</h2>
+              <h2 class="ftco-heading-2">Site Pages</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-2 d-block">Home</a></li>
                 <li><a href="#" class="py-2 d-block">About</a></li>
                 <li><a href="#" class="py-2 d-block">Donate</a></li>
                 <li><a href="#" class="py-2 d-block">Gallery</a></li>
+                <li><a href="#" class="py-2 d-block">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+             <div class="ftco-footer-widget mb-4 ml-md-4">
+              <h2 class="ftco-heading-2">Plolicy Pages</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
+                <li><a href="#" class="py-2 d-block">Terms & Conditions</a></li>
+                <li><a href="#" class="py-2 d-block">Refund Policy</a></li>
                 <li><a href="#" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
