--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Bengal Education Development Society</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <link rel="icon" type="image/x-icon" href="./img/logo.ico">
     
     <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Overpass:300,400,400i,600,700" rel="stylesheet">
