--- a/index.html
+++ b/index.html
@@ -303,16 +303,21 @@
 
     <section class="ftco-gallery">
     	<div class="d-md-flex">
+		<a href="./img/home-gallery-02.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-02.jpeg);">
+	    		<div class="icon d-flex justify-content-center align-items-center">
+	    			<span class="icon-search"></span>
+	    		</div>
+	    	</a>
 	    	<a href="./img/home-gallery-01.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-01.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
 	    	</a>
-	    	<a href="./img/home-gallery-02.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-02.jpeg);">
+<!-- 	    	<a href="./img/home-gallery-02.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-02.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
 	    		</div>
-	    	</a>
+	    	</a> -->
 	    	<a href="./img/home-gallery-03.jpeg" class="gallery image-popup d-flex justify-content-center align-items-center img ftco-animate" style="background-image: url(./img/home-gallery-03.jpeg);">
 	    		<div class="icon d-flex justify-content-center align-items-center">
 	    			<span class="icon-search"></span>
