--- a/index.html
+++ b/index.html
@@ -167,6 +167,42 @@
     </section>
 
     <section class="ftco-section">
+        <div class="container">
+          <div class="row d-flex align-items-center">
+            <div class="col-md-4 d-flex justify-content-center">
+              <div class="text-center w-100">
+                <img src="./img/Aminul_Islam_Founder_and_Chairman.jpeg" alt="Founder_and_Chairman" class="img-fluid rounded shadow mb-2">
+                <strong style="display:block; font-size:1.1rem;">Aminul Islam</strong>
+                <span style="display:block; color:#555;">Founder &amp; Chairman</span>
+              </div>
+            </div>
+            <div class="w-100 d-block d-md-none" style="height:24px;"></div>
+            <div class="col-md-8">
+              <center>
+                <strong class="d-block mb-3" style="font-size:1.3rem;">Message from the Founder & Chairman</strong>
+              </center>
+              <div class="p-4 bg-light rounded shadow-sm">
+                <p>I am delighted to introduce Bengal Education Development Society, an Indian non-profit organization dedicated to the holistic growth and development of our society. On behalf of the entire team, I extend a warm welcome to you all.</p>
+                <p>Our mission is deeply rooted in serving marginalized communities, focusing on education for underprivileged children, empowerment of women, support for farmers, the elderly, and needy individuals, and initiatives such as blood donation camps, thalassemia prevention, dengue awareness, water conservation, prevention of women trafficking, global warming awareness, plastic pollution control, moral education, awareness against superstitions, talent search examinations, tree plantation drives, disaster management programs, environmental sustainability, and promotion of peace and harmony. We also strive to bring school dropouts back into the mainstream of education, raise awareness on issues like child marriage, and inspire citizens with motivational programs like “Our Nation, Our Responsibility.”</p>
+              </div>
+            </div>  <div class="col-md-12"></div>
+              <div class="p-4 bg-light rounded shadow-sm">
+                <p>In addition, Bengal Education Development Society actively engages in Research & Development in critical fields such as Agriculture, Health, Education, Water Treatment, Sanitation, Solar Energy, Organic Farming, and Sustainable Development—all aimed at fostering growth and a better future for our nation and the world.</p>
+                <p>We are equally committed to youth development, guiding them onto the right path through awareness programs, motivational events, and leadership initiatives. Our organization works tirelessly to reach out to millions of neglected and marginalized individuals, empowering them to become self-reliant and fight for their rightful place in society.</p>
+                <p>We strongly believe that Right to Education and Right to Health are basic rights that should be accessible to every individual, regardless of their social or economic background. Bengal Education Development Society leaves no stone unturned in ensuring these rights are extended to those who have been deprived of them. Beyond providing education, we aim to empower people with the knowledge and resources to access the basic necessities of life, enabling them to earn dignity, respect, and a better future for the next generation.</p>
+                <p>As the Founder and Chairman, I firmly believe it is our duty and responsibility to give back to the society that nurtures us. Bengal Education Development Society was born from this very belief. My team and I remain committed to working with dedication, sincerity, and integrity, striving to build a brighter India and a better world.</p>
+                <p>Our strength lies in our team, sponsors, volunteers, supporters, and well-wishers, whose contributions make our work possible. We are deeply grateful for their continued support.</p>
+                <p>We warmly welcome anyone who wishes to join hands with us. If you are a youth or an individual who wants to make a difference, we invite you to visit us and be a part of our activities at any time.</p>
+                <p>Together, we can create a future filled with hope, opportunity, and dignity for all.</p>
+                <p>With best wishes and regards,</p>
+                <p>Aminul Islam<br>Founder & Chairman<br>Bengal Education Development Society<br>Barasat, Kolkata – 700124, India<br>Mobile: +91 9875385861 / 8336082361</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    <section class="ftco-section">
       <div class="container">
       <div class="row mb-5">
         <div class="col-md-12 mb-5"><h1>What We Do!</h1></div>
