--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="text">
                   <h3 class="mb-4">Donate Money</h3>
                   <p>Be the Change, Spark the Impact. Lighting the Path to Progress.</p>
-                  <p><a href="#" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p>
+                  <p><a href="./donate.html" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p>
                 </div>
               </div>
             </div>
