--- a/about.html
+++ b/about.html
@@ -574,7 +574,7 @@
               <div class="text">
               	<h3 class="mb-4">Donate Money</h3>
               	<p>Be the Change, Spark the Impact. Lighting the Path to Progress.</p>
-              	<p><a href="#" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p>
+              	<p><a href="./donate.html" class="btn btn-white px-3 py-2 mt-2">Donate Now</a></p>
               </div>
             </div>
           </div>
@@ -583,7 +583,7 @@
               <div class="text">
               	<h3 class="mb-4">Be a Volunteer</h3>
               	<p>Empowering Lives and Communities, One Step at a Time.</p>
-              	<p><a href="#" class="btn btn-white px-3 py-2 mt-2">Contact Us</a></p>
+              	<p><a href="./contact.html" class="btn btn-white px-3 py-2 mt-2">Contact Us</a></p>
               </div>
             </div>
           </div>
