--- a/about.html
+++ b/about.html
@@ -494,6 +494,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item active"><a href="./about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="./documents.html" class="nav-link">Documents</a></li>
+          <li class="nav-item"><a href="./talent-exam.html" class="nav-link">Talent Exam</a></li>
           <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="./contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="./donate.html" class="nav-link">Donate</a></li>
@@ -540,22 +541,6 @@
     		</div>
     	</div>
     </section>
-
-    
-    <!-- <section class="ftco-section">
-    	<div class="container">
-    		<div class="row d-flex">
-    			<div class="col-md-6 d-flex ftco-animate">
-    				<div class="img img-about align-self-stretch" style="background-image: url(images/bg_3.jpg); width: 100%;"></div>
-    			</div>
-    			<div class="col-md-6 pl-md-5 ftco-animate">
-    				<h2 class="mb-4">Welcome to Welfare Stablished Since 1898</h2>
-    				<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
-    				<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-    			</div>
-    		</div>
-    	</div>
-    </section> -->
 
     <section class="ftco-counter ftco-intro ftco-intro-2 counter-section" id="section-counter">
     	<div class="container">
@@ -790,6 +775,7 @@
                   <li><a href="./index.html" class="py-2 d-block">Home</a></li>
                   <li><a href="./about.html" class="py-2 d-block">About</a></li>
                   <li><a href="./documents.html" class="py-2 d-block">Documents</a></li>
+                  <li><a href="./talent-exam.html" class="py-2 d-block">Talent Exam</a></li>
                   <li><a href="./gallery.html" class="py-2 d-block">Gallery</a></li>
                   <li><a href="./donate.html" class="py-2 d-block">Donate</a></li>
                 </ul>
