--- a/contact.html
+++ b/contact.html
@@ -297,6 +297,7 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="./documents.html" class="nav-link">Documents</a></li>
+          <li class="nav-item"><a href="./talent-exam.html" class="nav-link">Talent Exam</a></li>
           <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item active"><a href="./contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="./donate.html" class="nav-link">Donate</a></li>
@@ -439,6 +440,7 @@
                   <li><a href="./index.html" class="py-2 d-block">Home</a></li>
                   <li><a href="./about.html" class="py-2 d-block">About</a></li>
                   <li><a href="./documents.html" class="py-2 d-block">Documents</a></li>
+                  <li><a href="./talent-exam.html" class="py-2 d-block">Talent Exam</a></li>
                   <li><a href="./gallery.html" class="py-2 d-block">Gallery</a></li>
                   <li><a href="./donate.html" class="py-2 d-block">Donate</a></li>
                 </ul>
