--- a/404.html
+++ b/404.html
@@ -411,6 +411,7 @@
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
             <li class="nav-item"><a href="./documents.html" class="nav-link">Documents</a></li>
+            <li class="nav-item"><a href="./talent-exam.html" class="nav-link">Talent Exam</a></li>
             <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>
             <li class="nav-item"><a href="./contact.html" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="./donate.html" class="nav-link">Donate</a></li>
@@ -832,127 +833,6 @@
         </div>
       </section>
 
-      <!-- <section class="ftco-section">
-        <div class="container">
-          <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section ftco-animate text-center">
-              <h2 class="mb-4">Recent from blog</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            </div>
-          </div>
-          <div class="row d-flex">
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sept 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mt-3"><a href="#">Hurricane Irma has devastated Florida</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sept 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mt-3"><a href="#">Hurricane Irma has devastated Florida</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sept 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mt-3"><a href="#">Hurricane Irma has devastated Florida</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- <section class="ftco-section bg-light">
-        <div class="container">
-          <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 heading-section ftco-animate text-center">
-              <h2 class="mb-4">Our Latest Events</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/event-1.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sep. 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mb-4"><a href="#">World Wide Donation</a></h3>
-                  <p class="time-loc"><span class="mr-2"><i class="icon-clock-o"></i> 10:30AM-03:30PM</span> <span><i class="icon-map-o"></i> Venue Main Campus</span></p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <p><a href="event.html">Join Event <i class="ion-ios-arrow-forward"></i></a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/event-2.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sep. 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mb-4"><a href="#">World Wide Donation</a></h3>
-                  <p class="time-loc"><span class="mr-2"><i class="icon-clock-o"></i> 10:30AM-03:30PM</span> <span><i class="icon-map-o"></i> Venue Main Campus</span></p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <p><a href="event.html">Join Event <i class="ion-ios-arrow-forward"></i></a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry align-self-stretch">
-                <a href="blog-single.html" class="block-20" style="background-image: url('images/event-3.jpg');">
-                </a>
-                <div class="text p-4 d-block">
-                  <div class="meta mb-3">
-                    <div><a href="#">Sep. 10, 2018</a></div>
-                    <div><a href="#">Admin</a></div>
-                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                  </div>
-                  <h3 class="heading mb-4"><a href="#">World Wide Donation</a></h3>
-                  <p class="time-loc"><span class="mr-2"><i class="icon-clock-o"></i> 10:30AM-03:30PM</span> <span><i class="icon-map-o"></i> Venue Main Campus</span></p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <p><a href="event.html">Join Event <i class="ion-ios-arrow-forward"></i></a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      
       <section class="ftco-section-3 img" style="background-image: url(./img/volunteer-banner-01.jpeg);">
         <div class="overlay"></div>
         <div class="container">
@@ -1004,6 +884,7 @@
                   <li><a href="./index.html" class="py-2 d-block">Home</a></li>
                   <li><a href="./about.html" class="py-2 d-block">About</a></li>
                   <li><a href="./documents.html" class="py-2 d-block">Documents</a></li>
+                  <li><a href="./talent-exam.html" class="py-2 d-block">Talent Exam</a></li>
                   <li><a href="./gallery.html" class="py-2 d-block">Gallery</a></li>
                   <li><a href="./donate.html" class="py-2 d-block">Donate</a></li>
                 </ul>
