--- a/talent-exam.html
+++ b/talent-exam.html
@@ -647,8 +647,8 @@
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
             <div class="col-md-7 ftco-animate text-center" data-scrollax=" properties: { translateY: '70%' }">
-             <p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-2"><a href="index.html">Home</a></span> <span>Documents</span></p>
-              <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Documents Center</h1>
+             <p class="breadcrumbs" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span class="mr-2"><a href="index.html">Home</a></span> <span>Talent Exam</span></p>
+              <h1 class="mb-3 bread" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Bengal Talent Search Scholarship Exam</h1>
             </div>
           </div>
         </div>
@@ -658,7 +658,7 @@
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-md-8 text-center">
-                    <h2 style="color: #2c3e50; font-size: 2.5rem; font-weight: 700; margin-bottom: 20px;">Talent Search Exam Centers</h2>
+                    <h2 style="color: #2c3e50; font-size: 2.5rem; font-weight: 700; margin-bottom: 20px;">Bengal Talent Search Scholarship <br>Exam Centers</h2>
                     <p style="color: #6c757d; font-size: 1.2rem;">Find your designated exam center and download important details</p>
                 </div>
             </div>
