--- a/about.html
+++ b/about.html
@@ -973,7 +973,7 @@
         const originalText = submitBtn.textContent;
         
         // Show loading state
-        submitBtn.textContent = 'Submitting...';
+        submitBtn.textContent = 'Submitting... Kindly wait';
         submitBtn.disabled = true;
         submitBtn.style.opacity = '0.7';
         
