--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
           const originalText = submitBtn.textContent;
           
           // Show loading state
-          submitBtn.textContent = 'Submitting...';
+          submitBtn.textContent = 'Submitting... Kindly wait';
           submitBtn.disabled = true;
           submitBtn.style.opacity = '0.7';
           
