--- a/talent-exam-application-form.html
+++ b/talent-exam-application-form.html
@@ -1308,7 +1308,7 @@
                 }
 
                 // Update button for submission phase
-                submitButton.innerHTML = '📤 Sending Data...';
+                submitButton.innerHTML = '📤 Submitting Data... Kindly Wait';
 
                 // Get selected exam modes
                 const examModeChecked = document.querySelectorAll('input[name="examMode"]:checked');
@@ -1629,3 +1629,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
