--- a/donate.html
+++ b/donate.html
@@ -203,7 +203,7 @@
             const originalText = submitBtn.textContent;
             
             // Show loading state
-            submitBtn.textContent = '🔄 Submitting...';
+            submitBtn.textContent = '🔄 Submitting... Kindly Wait';
             submitBtn.disabled = true;
             submitBtn.style.opacity = '0.7';
             
