--- a/talent-exam.html
+++ b/talent-exam.html
@@ -917,7 +917,7 @@
                     <tbody id="tableBody">
                         <tr data-center="center Name - 1">
                             <td class="serial-no">1</td>
-                            <td class="document-name">Center Name - 1</td>
+                            <td class="document-name">AL-AMEN DOPERIA SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1BRouC0OzkMMVgz1RPA0BQvPZtblI6JbQ?usp=sharing" class="view-btn">
@@ -929,7 +929,7 @@
                         </tr>
                         <tr data-center="center Name - 2">
                             <td class="serial-no">2</td>
-                            <td class="document-name">Center Name - 2</td>
+                            <td class="document-name">KAIJURI SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1iZ_sehAuJvVGPJm4Gi523Oq5blv-YfXa?usp=sharing" class="view-btn">
@@ -941,7 +941,7 @@
                         </tr>
                         <tr data-center="center Name - 3">
                             <td class="serial-no">3</td>
-                            <td class="document-name">Center Name - 3</td>
+                            <td class="document-name">KIDS WORLD ENGLISH SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1zlstXn4mgTr_oZpxRHUdVJaNg3iJWFhn?usp=sharing" class="view-btn">
@@ -953,7 +953,7 @@
                         </tr>
                         <tr data-center="center Name - 4">
                             <td class="serial-no">4</td>
-                            <td class="document-name">Center Name - 4</td>
+                            <td class="document-name">MADHABPUR SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1Emygc9fMAnLt1HyoIZFJ9u7c0KCPlkJ1?usp=sharing" class="view-btn">
@@ -965,7 +965,7 @@
                         </tr>
                         <tr data-center="center Name - 5">
                             <td class="serial-no">5</td>
-                            <td class="document-name">Center Name - 5</td>
+                            <td class="document-name">MAJERHERAIT SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1aKS__TxN1l_3_i5dKPFqs-Lvujq69Nc-?usp=sharing" class="view-btn">
@@ -977,7 +977,7 @@
                         </tr>
                         <tr data-center="center Name - 6">
                             <td class="serial-no">6</td>
-                            <td class="document-name">Center Name - 6</td>
+                            <td class="document-name">MAJHIPARA MUSTAFA MISSION</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1tCeACb2EEQ2rbizyZMLRnk8t1-e8Sw8r?usp=sharing" class="view-btn">
@@ -989,7 +989,7 @@
                         </tr>
                         <tr data-center="center Name - 7">
                             <td class="serial-no">7</td>
-                            <td class="document-name">Center Name - 7</td>
+                            <td class="document-name">MIRHATI BOYS SCHOOL</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/1wJ4MQeZKg68UAZ-_iMPy3mdvxbs6Fyd8?usp=sharing" class="view-btn">
@@ -1001,7 +1001,7 @@
                         </tr>
                         <tr data-center="center Name - 8">
                             <td class="serial-no">8</td>
-                            <td class="document-name">Center Name - 8</td>
+                            <td class="document-name">NEW HORIZON IDEAL ACADEMY</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/13W9HCW9rfsgfyu9WAMgXseBRk2ldJfqd?usp=sharing" class="view-btn">
@@ -1013,7 +1013,7 @@
                         </tr>
                         <tr data-center="center Name - 9">
                             <td class="serial-no">9</td>
-                            <td class="document-name">Center Name - 9</td>
+                            <td class="document-name">SARADA SISHU NIKETAN</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/17jWUWmVp6Uv7Dbcx9ApAqN0i4lmcSSrU?usp=sharing" class="view-btn">
@@ -1025,10 +1025,22 @@
                         </tr>
                         <tr data-center="center Name - 10">
                             <td class="serial-no">10</td>
-                            <td class="document-name">Center Name - 10</td>
+                            <td class="document-name">TALDHARIA</td>
                             <td class="download-cell">
                                 <div class="btn-container">
                                     <a href="https://drive.google.com/drive/folders/14VkTLt5N8ycN0Kp41YSIJ6yQc21Mn9qP?usp=sharing" class="view-btn">
+                                        <span class="view-icon">📝</span>
+                                        View Details
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr data-center="center Name - 11">
+                            <td class="serial-no">11</td>
+                            <td class="document-name">THE MODERN CHILD ACADEMY</td>
+                            <td class="download-cell">
+                                <div class="btn-container">
+                                    <a href="https://drive.google.com/drive/folders/1JmfgTwUX4rtAkWMlipqxSW8pSSlGUTiD?usp=sharing" class="view-btn">
                                         <span class="view-icon">📝</span>
                                         View Details
                                     </a>
@@ -1414,3 +1426,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
